Add dependency of messaging-framework module in email-service module and ensure the sanity of component/properties loading

--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -50,6 +50,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.karthik</groupId>
+            <artifactId>messaging-framework</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     
     <build>
