--- a/email-service/src/test/resources/application.properties
+++ b/email-service/src/test/resources/application.properties
@@ -4,3 +4,5 @@ spring.mail.username=<Login User to SMTP server>
 spring.mail.password=<Login password to SMTP server>
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+app.newsletter.gcpProjectID=test-project
+app.newsletter.gcpPubSubHost=localhost:8085
