Fix build issue due to parent project when doing mvn install

--- a/core-service/pom.xml
+++ b/core-service/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     
+    <groupId>com.karthik</groupId>
     <artifactId>core-service</artifactId>
     <version>1.0.0</version>
     
