--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     
+    <groupId>com.karthik</groupId>
     <artifactId>email-service</artifactId>
     <version>1.0.0</version>
     
