--- a/postman-api-collections/NewsletterApp.postman_collection.json
+++ b/postman-api-collections/NewsletterApp.postman_collection.json
@@ -13,7 +13,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"username\" : \"kar99\",\r\n    \"name\" : \"kiyer\",\r\n    \"emailID\" : \"karthik.iyer97@gmail.com\"\r\n}",
+					"raw": "{\r\n    \"username\" : \"kar97\",\r\n    \"name\" : \"kiyer2\",\r\n    \"emailID\" : \"karthik.iyer97@gmail.com\"\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -42,7 +42,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"content\" : \"This is my first blog\",\r\n    \"title\" : \"Blog number 1\",\r\n    \"userID\" : 1\r\n}",
+					"raw": "{\r\n    \"content\" : \"Hello blog\",\r\n    \"title\" : \"Blog hello\",\r\n    \"userID\" : 2\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -71,7 +71,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"name\" : \"Newsletter 1\",\r\n    \"userID\" : 1\r\n}",
+					"raw": "{\r\n    \"name\" : \"Newsletter Hello\",\r\n    \"userID\" : 2\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -100,7 +100,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"newsletterID\" : 1,\r\n    \"userID\" : 1\r\n}",
+					"raw": "{\r\n    \"newsletterID\" : 2,\r\n    \"userID\" : 2\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -130,7 +130,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"newsletterID\" : 1,\r\n    \"articleID\" : 2\r\n}",
+					"raw": "{\r\n    \"newsletterID\" : 2,\r\n    \"articleID\" : 3\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -180,7 +180,7 @@
 				"method": "GET",
 				"header": [],
 				"url": {
-					"raw": "http://localhost:8080/api/articles/countlikes/2",
+					"raw": "http://localhost:8080/api/articles/countlikes/3",
 					"protocol": "http",
 					"host": [
 						"localhost"
@@ -190,7 +190,7 @@
 						"api",
 						"articles",
 						"countlikes",
-						"2"
+						"3"
 					]
 				}
 			},
@@ -203,7 +203,7 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\r\n    \"articleID\" : 1,\r\n    \"userID\" : 2\r\n}",
+					"raw": "{\r\n    \"articleID\" : 3,\r\n    \"userID\" : 1\r\n}",
 					"options": {
 						"raw": {
 							"language": "json"
@@ -221,6 +221,57 @@
 						"api",
 						"articles",
 						"like"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Comment on Article",
+			"request": {
+				"method": "POST",
+				"header": [],
+				"body": {
+					"mode": "raw",
+					"raw": "{\r\n    \"articleID\" : 1,\r\n    \"commentContent\" : \"Well explained\"\r\n}",
+					"options": {
+						"raw": {
+							"language": "json"
+						}
+					}
+				},
+				"url": {
+					"raw": "http://localhost:8080/api/comments",
+					"protocol": "http",
+					"host": [
+						"localhost"
+					],
+					"port": "8080",
+					"path": [
+						"api",
+						"comments"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Get all comments",
+			"request": {
+				"method": "GET",
+				"header": [],
+				"url": {
+					"raw": "http://localhost:8080/api/comments/article/3",
+					"protocol": "http",
+					"host": [
+						"localhost"
+					],
+					"port": "8080",
+					"path": [
+						"api",
+						"comments",
+						"article",
+						"3"
 					]
 				}
 			},
